<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_loading">Loading…</string>
    <string name="app_name">我的世界:衍生</string>
    <string name="app_name_demo">Minecraft Demo</string>
    <string name="app_name_short">我的世界</string>
    <string name="app_name_short_demo">我的世界Demo</string>
    <string name="appcenter_android_id">c35d56a4-fe9c-4490-9d16-600825114d4b</string>
    <string name="backButton">返回</string>
    <string name="broker_processing">Broker is processing</string>
    <string name="com_appboy_api_key">d9430d08-2985-458e-9ed9-ef769d7e7e69</string>
    <string name="com_appboy_custom_endpoint">sdk.iad-05.braze.com</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="crop__cancel">CANCEL</string>
    <string name="crop__done">DONE</string>
    <string name="crop__pick_error">No image sources available</string>
    <string name="crop__saving">Saving picture…</string>
    <string name="crop__wait">Please wait…</string>
    <string name="export_ef_alert_cancel">取消</string>
    <string name="export_ef_alert_confirm">退出</string>
    <string name="export_ef_alert_message">你想要结束游戏并退出吗？</string>
    <string name="export_ef_alert_title">退出游戏</string>
    <string name="facebook_app_id">221094574568058</string>
    <string name="http_auth_dialog_cancel">Cancel</string>
    <string name="http_auth_dialog_login">Login</string>
    <string name="http_auth_dialog_password">Password</string>
    <string name="http_auth_dialog_title">Enter your credentials</string>
    <string name="http_auth_dialog_username">Username</string>
    <string name="messiah_cancel">取消</string>
    <string name="messiah_confirm">确定</string>
    <string name="messiah_pick_from_camera">相机</string>
    <string name="messiah_pick_from_library">相册</string>
    <string name="messiah_pick_image">选取照片</string>
    <string name="search_menu_title">Search</string>
    <string name="skipButton">跳过</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="unisdk_alert_dialog_info">未成年人消费限制说明</string>
    <string name="unisdk_alert_dialog_positive">我知道了</string>
    <string name="unisdk_alert_dialog_tips">提示</string>
    <string name="unisdk_protocol_accept">接 受</string>
    <string name="unisdk_protocol_confirm">确 定</string>
    <string name="unisdk_protocol_reject">拒 绝</string>
    <string name="unisdk_protocol_title">用户协议</string>
    <string name="xal_token">ms-xal-0000000048183522</string>
    <string name="xperiaplayoptimized_content">true</string>
    <string name="ct_account_action_confirm">确认登录</string>
    <string name="ct_account_action_return">返回</string>
    <string name="ct_account_auth_custom_privacy_text">《自定义服务协议》</string>
    <string name="ct_account_auth_privacy_text">天翼帐号服务与隐私协议</string>
    <string name="ct_account_brand_text">天翼帐号提供认证服务</string>
    <string name="ct_account_default_app_name">本应用</string>
    <string name="ct_account_error_not_pre_login">未调用预登录接口</string>
    <string name="ct_account_fmt_link_privacy_activity">勾选即同意《%1$s》并授权%2$s获取本机号码</string>
    <string name="ct_account_fmt_link_privacy_span">%s帐号服务与隐私协议</string>
    <string name="ct_account_label_desensitise_phone_no_default">以本机号码登录</string>
    <string name="ct_account_label_login_one_tap">本机号码一键登录</string>
    <string name="ct_account_label_other_channel">其他登录方式</string>
    <string name="ct_account_title_login_activity">免密登录</string>
    <string name="ct_account_title_privacy_activity">服务条款与隐私协议</string>
    <string name="fv_error_3rd_args">第三方SDK参数不完整</string>
    <string name="fv_error_3rd_dummy">人脸识别服务未正常返回结果</string>
    <string name="fv_success_history">已有核验成功记录</string>
    <string name="fv_success_now">核验成功</string>
    <string name="m4399_action_cancel">取消</string>
    <string name="m4399_action_close">关闭</string>
    <string name="m4399_action_confirm">确定</string>
    <string name="m4399_action_done">完成</string>
    <string name="m4399_action_goon">继续</string>
    <string name="m4399_action_retry">重试</string>
    <string name="m4399_action_return">返回</string>
    <string name="m4399_al_formatter_privacy_prompt">登录即同意%s</string>
    <string name="m4399_al_two_formatter_privacy_prompt">登录即同意%1$s和%2$s</string>
    <string name="m4399_cloud_archive_already_init">请不要重复初始化</string>
    <string name="m4399_cloud_archive_archive_cannot_be_null">参数错误，存档不能null</string>
    <string name="m4399_cloud_archive_archive_data_cannot_be_empty">参数错误，存档数据不能空</string>
    <string name="m4399_cloud_archive_archive_title_cannot_be_empty">参数错误，存档标题不能空</string>
    <string name="m4399_cloud_archive_network_error">网络错误</string>
    <string name="m4399_cloud_archive_not_inited">云存档未初始化，请先初始化</string>
    <string name="m4399_cloud_archive_not_logged_in">未登录账号，无法使用云存档功能</string>
    <string name="m4399_cloud_archive_public_key_cannot_be_empty">参数错误，公钥不能空</string>
    <string name="m4399_cloud_archive_signature_error">签名错误</string>
    <string name="m4399_download_error_head">下载失败，获取文件信息失败</string>
    <string name="m4399_download_error_io">下载失败，请重新检查网络</string>
    <string name="m4399_download_error_md5">下载完成，文件校验失败</string>
    <string name="m4399_download_message_download_dir">下载完成后请到系统文件管理下的安装包目录查找文件</string>
    <string name="m4399_download_success_already">已存在下载好的文件</string>
    <string name="m4399_download_toast_install_already">应用已安装，可直接使用</string>
    <string name="m4399_download_toast_open_file">请到通知栏或系统文件管理器打开文件</string>
    <string name="m4399_download_toast_pending">已经开始下载啦，请到下载管理查看进度</string>
    <string name="m4399_download_toast_running">下载中，请到下载管理查看进度</string>
    <string name="m4399_download_toast_success">已成功下载，立刻为您安装</string>
    <string name="m4399_ea_activation_cdk_edt_hint">请输入激活码</string>
    <string name="m4399_ea_activation_confirm">确认激活</string>
    <string name="m4399_ea_activation_empty">激活码不能为空</string>
    <string name="m4399_ea_activation_get_cdk">没有激活码？前往4399游戏盒获取</string>
    <string name="m4399_ea_activation_intercept_dialog_btn_ok_text">前往游戏盒预约</string>
    <string name="m4399_ea_activation_intercept_dialog_message">你暂未获取本次测试资格，可前往游戏盒预约该游戏你暂未获取本次测试资格</string>
    <string name="m4399_ea_activation_invalid">激活码无效</string>
    <string name="m4399_ea_activation_launch_error">启动游戏盒失败，请更新游戏盒版本之后重试</string>
    <string name="m4399_ea_activation_msg_instructions">您需要用激活码激活本游戏，激活码可在4399游戏盒APP中获取</string>
    <string name="m4399_ea_activation_paste_cdk">粘贴激活码:</string>
    <string name="m4399_ea_activation_type_unknown">请更新激活SDK到最新版本!</string>
    <string name="m4399_ea_al_result_handler_failure_dialog_message">未知错误</string>
    <string name="m4399_ea_al_result_handler_failure_dialog_title">出错啦</string>
    <string name="m4399_error_broken_state">页面已过期或数据丢失，请重新打开或重启应用</string>
    <string name="m4399_login_3rd_cm">中移动</string>
    <string name="m4399_login_3rd_ct">天翼</string>
    <string name="m4399_login_3rd_info">%1$s网络：%2$s SDK 授权服务</string>
    <string name="m4399_login_3rd_wo">小沃</string>
    <string name="m4399_login_account_privacy_basic">登录即同意《%1$s》</string>
    <string name="m4399_login_error_config_miss">一键登录应用配置不全</string>
    <string name="m4399_login_error_invalid_negotiation">多帐号协商协议未实现</string>
    <string name="m4399_login_error_no_login_listener">页面过期，请重试</string>
    <string name="m4399_login_error_no_operator_privacy">自定义隐私链接缺少运营商内容</string>
    <string name="m4399_login_error_not_init">SDK 未初始化或初始化失败</string>
    <string name="m4399_login_error_object_dead">内部状态异常</string>
    <string name="m4399_login_error_over_limit">未检测到移动网络，或当前手机网络不支持一键登录</string>
    <string name="m4399_login_privacy_protocol_4399">https://ptlogin.4399.com/www_resource/protocol.html</string>
    <string name="m4399_login_privacy_protocol_mobile">https://wap.cmpassport.com/resources/html/contract.html</string>
    <string name="m4399_login_privacy_protocol_telecom">https://e.189.cn/sdk/agreement/detail.do?hidetop=true</string>
    <string name="m4399_login_privacy_protocol_unicom">https://opencloud.wostore.cn/authz/resource/html/disclaimer.html?fromsdk=true</string>
    <string name="m4399_login_sp_mobile">移动</string>
    <string name="m4399_login_sp_telecom">电信</string>
    <string name="m4399_login_sp_unicom">联通</string>
    <string name="m4399_network_error_auth_failure">访问未授权</string>
    <string name="m4399_network_error_client">客户端错误</string>
    <string name="m4399_network_error_network">网络连接异常</string>
    <string name="m4399_network_error_no_connection">无网络连接</string>
    <string name="m4399_network_error_normal">请求异常，请检查网络后重试</string>
    <string name="m4399_network_error_parse">数据解析错误</string>
    <string name="m4399_network_error_server">服务端错误</string>
    <string name="m4399_network_error_timeout">请求超时</string>
    <string name="m4399_ope_account_bind_skip">跳过</string>
    <string name="m4399_ope_close">关闭</string>
    <string name="m4399_ope_coupon_receive">立即领取</string>
    <string name="m4399_ope_fab_delay_coupon_receive">您有新的优惠券，请前往领取</string>
    <string name="m4399_ope_network_error_dialog_btn_check_network_text">检查网络</string>
    <string name="m4399_ope_network_error_dialog_btn_enable_permission_text">如何开启</string>
    <string name="m4399_ope_network_error_dialog_message_check_network">检查网络连接是否正常</string>
    <string name="m4399_ope_network_error_dialog_message_enable_permission">游戏是否开启网络权限</string>
    <string name="m4399_ope_network_error_dialog_title">网络连接异常，可尝试以下操作</string>
    <string name="m4399_ope_quick_auth_other_phone">其它手机号登录</string>
    <string name="m4399_ope_quick_auth_title">4399帐号登录</string>
    <string name="m4399_ope_verify_loading_text">加载中</string>
    <string name="m4399_ope_verify_sms_cancel_text">取消</string>
    <string name="m4399_ope_verify_sms_code_hint">请输入验证码</string>
    <string name="m4399_ope_verify_sms_confirm_text">确定</string>
    <string name="m4399_ope_verify_sms_get_code_text">获取验证码</string>
    <string name="m4399_ope_verify_sms_phone_number_hint">请输入手机号</string>
    <string name="m4399_ope_verify_sms_phone_number_text">手机号</string>
    <string name="m4399_ope_verify_sms_sms_code_text">验证码</string>
</resources>