<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/ct_account_dialog_layout" android:background="@drawable/ct_account_dialog_conner_bg" android:layout_width="@dimen/m4399_ope_dialog_width_304" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:textColor="@color/m4399_ope_color_333333" android:id="@id/ct_account_dialog_privacy" android:tag="\#54ba3d" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="26.0dip" android:layout_marginTop="28.0dip" android:layout_marginRight="26.0dip" android:layout_marginBottom="25.0dip" android:text="@string/m4399_al_two_formatter_privacy_prompt" android:lineSpacingExtra="9.0dip" />
    <View style="@style/m4399PerfectLine" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="45.0dip">
        <Button android:textSize="16.0sp" android:textColor="@drawable/m4399_ope_verify_confirm_btn_selector" android:gravity="center" android:id="@id/ct_account_dialog_cancel" android:background="@drawable/ct_account_dialog_cancel_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/ct_account_action_return" android:layout_weight="1.0" />
        <View android:background="@color/m4399_ope_perfect_line" android:layout_width="0.5dip" android:layout_height="fill_parent" />
        <Button android:textSize="16.0sp" android:textColor="@drawable/m4399_ope_verify_confirm_btn_selector" android:gravity="center" android:id="@id/ct_account_dialog_confirm" android:background="@drawable/ct_account_dialog_confirm_selector" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/ct_account_action_confirm" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>