<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/m4399_ope_fragment_container" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/m4399_ope_support_nav_bar_layout" />
    <LinearLayout android:orientation="vertical" android:background="@color/m4399_ope_color_page_bg" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="@dimen/m4399_font_16" android:textColor="@color/m4399_ope_color_ffa92d" android:gravity="center_vertical" android:layout_gravity="center" android:id="@id/m4399_ope_verify_sms_tips" android:background="@android:color/white" android:paddingLeft="@dimen/m4399_activity_spacing_h" android:paddingRight="@dimen/m4399_activity_spacing_h" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/m4399_ope_verify_sms_height_dimen" />
        <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:background="@android:color/white" android:paddingLeft="@dimen/m4399_activity_spacing_h" android:paddingRight="@dimen/m4399_activity_spacing_h" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="@dimen/m4399_spacing_8">
            <TextView android:textSize="@dimen/m4399_font_16" android:textColor="@color/m4399_ope_color_333333" android:gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/m4399_ope_verify_sms_phone_number_text" />
            <EditText android:id="@id/m4399_sms_verify_phone_number" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="30.0dip" android:hint="@string/m4399_ope_verify_sms_phone_number_hint" style="@style/m4399_sms_verify_editor" />
        </LinearLayout>
        <include layout="@layout/m4399_ope_support_divider_h" />
        <RelativeLayout android:orientation="horizontal" android:background="@android:color/white" android:paddingLeft="@dimen/m4399_activity_spacing_h" android:paddingRight="@dimen/m4399_activity_spacing_h" android:layout_width="fill_parent" android:layout_height="50.0dip">
            <TextView android:textSize="@dimen/m4399_font_16" android:textColor="@color/m4399_ope_color_333333" android:gravity="center" android:id="@id/m4399_ope_verify_sms_code_label" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/m4399_ope_verify_sms_sms_code_text" />
            <EditText android:id="@id/m4399_sms_verify_sms_code" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="30.0dip" android:layout_marginRight="115.0dip" android:hint="@string/m4399_ope_verify_sms_code_hint" android:layout_toRightOf="@id/m4399_ope_verify_sms_code_label" style="@style/m4399_sms_verify_editor" />
            <Button android:textSize="@dimen/m4399_font_14" android:textColor="@color/m4399_ope_color_primary" android:gravity="center" android:id="@id/m4399_sms_verify_code_btn" android:background="@drawable/m4399_ope_ripple_rectangle_outline" android:layout_width="@dimen/m4399_ope_verify_code_btn_width_dimen" android:layout_height="@dimen/m4399_ope_verify_code_btn_height_dimen" android:layout_marginRight="@dimen/m4399_ope_verify_sms_spacing_h" android:text="@string/m4399_ope_verify_sms_get_code_text" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            <TextView android:textSize="@dimen/m4399_font_14" android:textColor="@color/m4399_ope_verify_sms_code_disable_color" android:gravity="center" android:id="@id/m4399_sms_verify_down_timer_text" android:background="@drawable/m4399_ope_shape_r4_gray_outline" android:visibility="gone" android:layout_width="@dimen/m4399_ope_verify_code_btn_width_dimen" android:layout_height="@dimen/m4399_ope_verify_code_btn_height_dimen" android:layout_marginRight="@dimen/m4399_ope_verify_sms_spacing_h" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <View android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <Button android:enabled="false" android:textSize="@dimen/m4399_font_16" android:textColor="@color/m4399_ope_color_ffffff" android:id="@id/m4399_ope_sms_verify_confirm_btn" android:background="@drawable/m4399_ope_ripple_r4_green" android:layout_width="fill_parent" android:layout_height="@dimen/m4399_ope_verify_sms_height_dimen" android:layout_marginLeft="@dimen/m4399_activity_spacing_h" android:layout_marginRight="@dimen/m4399_activity_spacing_h" android:layout_marginBottom="@dimen/m4399_activity_spacing_v" android:text="@string/m4399_ope_verify_sms_confirm_text" />
    </LinearLayout>
</LinearLayout>