<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="@dimen/m4399_ope_dialog_width_304" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_margin="26.0dip">
        <EditText android:textSize="@dimen/m4399_font_14" android:textColor="@color/m4399_ope_color_333333" android:textColorHint="@color/m4399_ope_color_bbbbbb" android:id="@id/m4399_ope_sms_verify_dialog_editor" android:background="@drawable/m4399_ope_verify_shape_editor" android:paddingLeft="@dimen/m4399_spacing_12" android:layout_width="150.0dip" android:layout_height="fill_parent" android:layout_marginRight="@dimen/m4399_spacing_12" android:hint="@string/m4399_ope_verify_sms_code_hint" android:cursorVisible="true" android:textCursorDrawable="@null" />
        <ImageView android:id="@id/m4399_ope_sms_verify_pic_view" android:layout_width="92.0dip" android:layout_height="fill_parent" android:scaleType="centerCrop" />
        <TextView android:textSize="@dimen/m4399_font_14" android:textColor="@color/m4399_ope_color_999999" android:gravity="center" android:id="@id/m4399_ope_sms_verify_loading_view" android:background="@color/m4399_ope_color_eeeeee" android:visibility="gone" android:layout_width="@dimen/m4399_ope_verify_code_btn_width_dimen" android:layout_height="fill_parent" android:text="@string/m4399_ope_verify_loading_text" />
    </LinearLayout>
    <include layout="@layout/m4399_ope_support_divider_h" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="45.0dip">
        <Button android:textSize="@dimen/m4399_font_16" android:textColor="@drawable/m4399_ope_verify_cancel_btn_selector" android:id="@id/m4399_ope_sms_verify_dialog_cancel_btn" android:background="@drawable/m4399_ope_support_dialog_btn_negative_bg" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/m4399_ope_verify_sms_cancel_text" android:layout_weight="1.0" />
        <include layout="@layout/m4399_ope_support_divider_v" />
        <FrameLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <Button android:textSize="@dimen/m4399_font_16" android:textColor="@drawable/m4399_ope_verify_confirm_btn_selector" android:id="@id/m4399_ope_sms_verify_dialog_confirm_btn" android:background="@drawable/m4399_ope_support_dialog_btn_positive_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/m4399_ope_verify_sms_confirm_text" />
            <ProgressBar android:layout_gravity="center" android:id="@id/m4399_ope_sms_verify_dialog_confirm_loading" android:visibility="gone" android:layout_width="20.0dip" android:layout_height="20.0dip" android:max="10000" android:indeterminateDrawable="@drawable/m4399_progress_dialog_drawable" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>