<?xml version="1.0" encoding="utf-8"?>
<cn.m4399.operate.support.component.FiniteLinearLayout android:orientation="vertical" android:background="@drawable/m4399_ope_dialog_bg" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/m4399_font_16" android:textColor="@color/m4399_ope_color_333333" android:id="@id/m4399_id_tv_dialog_title" android:paddingLeft="25.0dip" android:paddingRight="25.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/m4399_dialog_finite_title_mt" android:text="@string/m4399_ope_network_error_dialog_title" />
    <ScrollView android:scrollbarSize="4.0dip" android:scrollbarThumbVertical="@drawable/m4399_ope_upd_scroll_bar_bg" android:scrollbarStyle="outsideOverlay" android:id="@id/m4399_id_finite_dialog_content_container" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="@dimen/m4399_dialog_finite_content_mt" android:layout_weight="1.0" android:fadeScrollbars="true">
        <LinearLayout android:orientation="vertical" android:paddingLeft="25.0dip" android:paddingRight="25.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <View android:layout_gravity="center_vertical" android:background="@drawable/m4399_ope_shape_r2_57be6a" android:layout_width="4.0dip" android:layout_height="4.0dip" />
                <TextView android:textSize="@dimen/m4399_font_14" android:textColor="@color/m4399_ope_color_666666" android:layout_gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_marginRight="6.0dip" android:text="@string/m4399_ope_network_error_dialog_message_check_network" android:layout_weight="1.0" />
                <TextView android:textSize="@dimen/m4399_font_12" android:textColor="@color/m4399_ope_network_error_btn_text_color" android:layout_gravity="center" android:id="@id/m4399_id_btn_check_network" android:background="@drawable/m4399_ope_shape_network_error_btn_bg" android:paddingLeft="10.0dip" android:paddingTop="6.0dip" android:paddingRight="10.0dip" android:paddingBottom="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/m4399_ope_network_error_dialog_btn_check_network_text" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/m4399_spacing_16">
                <View android:layout_gravity="center_vertical" android:background="@drawable/m4399_ope_shape_r2_57be6a" android:layout_width="4.0dip" android:layout_height="4.0dip" />
                <TextView android:textSize="@dimen/m4399_font_14" android:textColor="@color/m4399_ope_color_666666" android:layout_gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:layout_marginRight="6.0dip" android:text="@string/m4399_ope_network_error_dialog_message_enable_permission" android:layout_weight="1.0" />
                <TextView android:textSize="@dimen/m4399_font_12" android:textColor="@color/m4399_ope_network_error_btn_text_color" android:layout_gravity="center" android:id="@id/m4399_id_btn_enable_permission" android:background="@drawable/m4399_ope_shape_network_error_btn_bg" android:paddingLeft="10.0dip" android:paddingTop="6.0dip" android:paddingRight="10.0dip" android:paddingBottom="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/m4399_ope_network_error_dialog_btn_enable_permission_text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <include layout="@layout/m4399_ope_support_dialog_couple_actions" />
</cn.m4399.operate.support.component.FiniteLinearLayout>