<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/m4399_nav_height">
        <ImageView android:layout_gravity="center_vertical" android:id="@id/ct_account_nav_return" android:background="@drawable/m4399_ope_support_nav_icon_bg" android:src="@drawable/m4399_ope_support_ic_left_arrow" style="@style/m4399.Nav.Icon" />
        <TextView android:textSize="18.0sp" android:textColor="@android:color/black" android:ellipsize="end" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/m4399_ope_quick_auth_title" android:maxLines="1" />
    </LinearLayout>
    <include layout="@layout/m4399_ope_support_divider_h" />
    <TextView android:textSize="12.0sp" android:textColor="@color/m4399_ope_color_999999" android:layout_gravity="center" android:id="@id/ct_account_brand_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="70.0dip" android:text="@string/ct_account_brand_text" />
    <ImageView android:id="@id/ct_account_app_logo" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView android:textSize="33.0sp" android:textStyle="bold" android:textColor="@color/m4399_ope_color_333333" android:layout_gravity="center_horizontal" android:id="@id/ct_account_insensitive_phone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" />
    <FrameLayout android:gravity="center" android:layout_gravity="center" android:id="@id/ct_account_login_btn" android:background="@drawable/m4399_ope_ripple_r4_green" android:layout_width="326.0dip" android:layout_height="43.0dip" android:layout_marginLeft="@dimen/ct_margin_login_btn_container" android:layout_marginTop="28.0dip" android:layout_marginRight="@dimen/ct_margin_login_btn_container">
        <ImageView android:layout_gravity="center" android:id="@id/ct_account_login_loading" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ct_account_login_loading_icon" android:scaleType="center" />
        <TextView android:textSize="16.0sp" android:textColor="@android:color/white" android:layout_gravity="center" android:id="@id/ct_account_login_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ct_account_label_login_one_tap" />
    </FrameLayout>
    <FrameLayout android:id="@id/ct_account_extend_view_container" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="20.0dip" android:layout_weight="1.0">
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:textColor="@color/m4399_ope_color_primary" android:id="@id/m4399_ope_extra_login_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/m4399_ope_quick_auth_other_phone" />
            <View android:layout_gravity="center" android:id="@id/m4399_ope_id_line" android:background="@color/m4399_ope_color_primary" android:layout_width="1.0dip" android:layout_height="12.0dip" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" />
            <TextView android:textSize="14.0sp" android:textColor="@color/m4399_ope_color_primary" android:id="@id/m4399_ope_extra_login_right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/m4399_ope_quick_auth_title" />
        </LinearLayout>
    </FrameLayout>
    <TextView android:layout_gravity="center_horizontal" android:id="@id/ct_account_other_login_way" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <RelativeLayout android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="16.0dip">
        <CheckBox android:id="@id/ct_auth_privacy_checkbox" android:padding="2.0dip" android:layout_width="18.0dip" android:layout_height="18.0dip" android:checked="false" android:button="@drawable/m4399_ope_quick_auth_check_selector" android:layout_alignParentLeft="true" />
        <TextView android:textSize="12.0sp" android:textColor="#66000000" android:id="@id/ct_auth_privacy_text" android:tag="\#5fa900" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ct_account_fmt_link_privacy_activity" android:layout_toRightOf="@id/ct_auth_privacy_checkbox" android:lineSpacingExtra="2.0dip" />
    </RelativeLayout>
</LinearLayout>